--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
-      materialized: view
+    staging:
+      tpch:
+        +materialized: view
+    marts:
+      core:
+        +materialized: table
