Added documentation to the order_ID column from the orders source

--- a/models/staging/tpch/_tpch__sources.yml
+++ b/models/staging/tpch/_tpch__sources.yml
@@ -8,6 +8,7 @@ sources:
       - name: orders
         columns:
         - name: order_id
+          description: The unique order identifier
           tests:
             - not_null
             - unique
